--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Watch NFL, NHL, MLB, NBA, and more live sports on PixelSport TV. Stream in HD, catch every goal, touchdown, and match moment"
     />
     <meta
       http-equiv="Content-Security-Policy"
