--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,8 @@
     />
     <meta
       http-equiv="Content-Security-Policy"
-      content="frame-ancestors 'none'; upgrade-insecure-requests"
+      content="upgrade-insecure-requests"
     />
-    <meta http-equiv="X-Frame-Options" content="DENY" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
